update: agregado de inf

--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <header class="page-header">
+        <a href="index.html">PROFECTUS</a>
+        <nav>
+            <ul class="header-menu">
+                <li>
+                    <a href="#">SPORTS</a>
+                </li>
+                <li>
+                    <a href="#">NEWSROOM</a>
+                </li>
+                <li>
+                    <a href="contact_us.html">CONTACT</a>
+                </li>
+                <li>
+                    <a href="demo.html">REQUEST DEMO</a>
+                </li>
+            </ul>
+        </nav>
+        <div>
+            <a href="register.html">Register</a>
+        </div>
+        <div>
+            <a href="register.html">Login</a>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
