--- a/index.html
+++ b/index.html
@@ -7,36 +7,65 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <header class="page-header">
-        <a href="index.html">PROFECTUS</a>
-        <nav>
-            <ul class="header-menu">
-                <li>
-                    <a href="#">SPORTS</a>
-                </li>
-                <li>
-                    <a href="#">NEWSROOM</a>
-                </li>
-                <li>
-                    <a href="contact_us.html">CONTACT</a>
-                </li>
-                <li>
-                    <a href="demo.html">REQUEST DEMO</a>
-                </li>
-            </ul>
-        </nav>
-        <div>
-            <a href="register.html">Register</a>
-        </div>
-        <div>
-            <a href="register.html">Login</a>
-        </div>
-    </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
+    <section class="landing">
+        <header id="header">
+            <nav class="header-menu">
+                    <ul class="header-items">
+                        <li>
+                            <a href="#about_us">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#images">Sports</a>
+                        </li>
+                        <li>
+                            <a href="#events">NewsRoom</a>
+                        </li>
+                        <li>
+                            <a href="#footer">Contact Us</a>
+                        </li>
+                    </ul>
+                    <a href="#header" class="main">Profectus</a>
+                    <button class="demo">REQUEST DEMO</button>
+            </nav>
+        </header>
+        <section class="images">
+            <img src="" alt="kids_playing">
+            <h2>Sports Facilities for every person</h2>
+            <p>Book your spot at Geek Sport! Enjoy a variety of activities, from basketball to swimming, and maximize your fitness journey</p>
+            <button>Book Now</button>
+        </section>
+        <section class="about_us" id="about_us">
+            <div class="about_us1">
+                <img src="" alt="basketball_court">
+            </div>
+            <div class="about_us2">
+                <h1>/About</h1>
+                <h2>At Geek Sport Center, We Create a Great Space for Athletes of all Skills Levels.</h2>
+                <div class="row_images">
+                    <img src="" alt="ball">
+                    <img src="" alt="court">
+                    <img src="" alt="trail">
+                </div>
+                <p>At Geek Sport Center, we are deeply passionate about creating and nurturing an incredible environment that welcomes athletes from all walks of life, regardless of their backgrounds or skills levels.</p>
+            </div>
+        </section>
+        <section class="events" id="events">
+            <nav>
+                <h1>/Featued Events</h1>
+                <button>Boxing</button>
+                <button>Basketball</button>
+                <button>Valley Ball</button>
+            </nav>
+            <h2>Challenge Yourself, Compete with the Best, and Take Tour Game to the Next Level</h2>
+            <p>Push your limits and compete with the best. Embrace new strategies to elevate your game and learn from top competitos.</p>
+            <div>
+                <img src="" alt="Pool">
+                <img src="" alt="Boxing">
+            </div>
+        </section>
+        <footer id="footer">
+            <h2 style="color: purple;">PENDING</h2>
+        </footer>
+    </section>
 </body>
 </html>
