update: header details

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
             <nav class="header-menu">
                     <ul class="header-items">
                         <li>
-                            <a href="#about_us">About Us</a>
+                            <a href="#about_us" class="anchor">About Us</a>
                         </li>
                         <li>
-                            <a href="#images">Sports</a>
+                            <a href="#images" class="anchor">Sports</a>
                         </li>
                         <li>
-                            <a href="#events">NewsRoom</a>
+                            <a href="#events" class="anchor">NewsRoom</a>
                         </li>
                         <li>
-                            <a href="#footer">Contact Us</a>
+                            <a href="#footer" class="anchor">Contact Us</a>
                         </li>
                     </ul>
                     <a href="#header" class="main">Profectus</a>
