update: contenido images

--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
                         </li>
                     </ul>
                     <a href="#header" class="main">Profectus</a>
-                    <button class="demo">REQUEST DEMO</button>
+                    <a href="register.html">
+                        <button class="demo">REQUEST DEMO</button>
+                    </a>
+                    
             </nav>
         </header>
-        <section class="images">
-            <img src="" alt="kids_playing">
-            <h2>Sports Facilities for every person</h2>
-            <p>Book your spot at Geek Sport! Enjoy a variety of activities, from basketball to swimming, and maximize your fitness journey</p>
-            <button>Book Now</button>
+        <section class="images"> <!-- ! Se quito img, quedo un espacio en blanco. Este se quito poniendole margin-top: 0 a h2 -->
+            <h1 class="title_image">Sports Facilities for every person</h1>
+            <p class="parag_image">Book your spot at Geek Sport! Enjoy a variety of activities, from basketball to swimming, and maximize your fitness journey</p>
+            <button class="btt_image">Book Now</button>
         </section>
         <section class="about_us" id="about_us">
             <div class="about_us1">
