--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
         </section>
         <section class="about_us" id="about_us">
             <div class="about_us1">
-                <img src="" alt="basketball_court">
+                <img src="images/court.jpg" alt="basketball_court">
             </div>
             <div class="about_us2">
-                <h1>/About</h1>
-                <h2>At Geek Sport Center, We Create a Great Space for Athletes of all Skills Levels.</h2>
+                <h1 class="h_about">/About</h1>
+                <h2 class="h2_about">At Geek Sport Center, We Create a Great Space for Athletes of all Skills Levels.</h2>
                 <div class="row_images">
-                    <img src="" alt="ball">
-                    <img src="" alt="court">
-                    <img src="" alt="trail">
+                    <img src="images/court1.jpg" alt="ball">
+                    <img src="images/court2.jpg" alt="court">
+                    <img src="images/track.jpg" alt="trail">
                 </div>
-                <p>At Geek Sport Center, we are deeply passionate about creating and nurturing an incredible environment that welcomes athletes from all walks of life, regardless of their backgrounds or skills levels.</p>
+                <p class="p_images">At Geek Sport Center, we are deeply passionate about creating and nurturing an incredible environment that welcomes athletes from all walks of life, regardless of their backgrounds or skills levels.</p>
             </div>
         </section>
         <section class="events" id="events">
