--- a/index.html
+++ b/index.html
@@ -38,35 +38,76 @@
         </section>
         <section class="about_us" id="about_us">
             <div class="about_us1">
-                <img src="images/court.jpg" alt="basketball_court">
+                <img src="images/court.jpg" alt="basketball_court" class="image_about_us">
             </div>
             <div class="about_us2">
                 <h1 class="h_about">/About</h1>
                 <h2 class="h2_about">At Geek Sport Center, We Create a Great Space for Athletes of all Skills Levels.</h2>
                 <div class="row_images">
-                    <img src="images/court1.jpg" alt="ball">
-                    <img src="images/court2.jpg" alt="court">
-                    <img src="images/track.jpg" alt="trail">
+                    <img src="images/court1.jpg" alt="ball" class="image_about_us">
+                    <img src="images/court2.jpg" alt="court" class="image_about_us">
+                    <img src="images/track.jpg" alt="trail" class="image_about_us">
                 </div>
-                <p class="p_images">At Geek Sport Center, we are deeply passionate about creating and nurturing an incredible environment that welcomes athletes from all walks of life, regardless of their backgrounds or skills levels.</p>
+                <p class="p_about">At Geek Sport Center, we are deeply passionate about creating and nurturing an incredible environment that welcomes athletes from all walks of life, regardless of their backgrounds or skills levels.</p>
             </div>
         </section>
         <section class="events" id="events">
-            <nav>
-                <h1>/Featued Events</h1>
-                <button>Boxing</button>
-                <button>Basketball</button>
-                <button>Valley Ball</button>
+            <nav class="header_events">
+                <h1 class="h_events">/Featued Event</h1>
+                <div>
+                    <button class="btt_events">Boxing</button>
+                    <button class="btt_events">Basketball</button>
+                    <button class="btt_events">Valley Ball</button>    
+                </div>   
             </nav>
-            <h2>Challenge Yourself, Compete with the Best, and Take Tour Game to the Next Level</h2>
-            <p>Push your limits and compete with the best. Embrace new strategies to elevate your game and learn from top competitos.</p>
-            <div>
-                <img src="" alt="Pool">
-                <img src="" alt="Boxing">
+            <div class="sec1_events">
+                <h2>Challenge Yourself, Compete with the Best, and Take Tour Game to the Next Level</h2>
+                <p>Push your limits and compete with the best. Embrace new strategies to elevate your game and learn from top competitos.</p>
+            </div>
+            <div class="sec2_events">
+                <img src="images/pool.jpg" alt="Pool" class="img_events">
+                <img src="images/boxing.jpg" alt="Boxing" class="img_events">
             </div>
         </section>
         <footer id="footer">
-            <h2 style="color: purple;">PENDING</h2>
+            <div class="sec1_footer">
+                <a href="#header">
+                    <img src="images/geeksport.png" alt="GeekSport" class="icon">
+                </a>
+                <p class="p1_footer">We are passionete about creating and maintaining a great environment that welcomes athletes from all walks of life. </p>
+                <p class="p2_footer">Copyright 2025 GeelSport All right reserved</p>
+            </div>
+            <div class="sec2_footer">
+                <h2 class="h_footer">Facilities</h2>
+                <div class="p_footer">
+                    <p>Swimming Pool</p>
+                    <p>Boxing Court</p>
+                    <p>Tennis Courts</p>
+                    <p>Football Fields</p>
+                    <p>Basketball Courts</p>
+                    <p>Gym & Fitness Center</p>
+                </div>
+            </div>
+            <div class="sec3-4-5_footer">
+                <h2 class="h_footer">About Us</h2>
+                <div class="p_footer">
+                    <p>Our Story</p>
+                    <p>Vision & Mission</p>
+                    <p>Community</p>
+                </div>
+            </div>
+            <div class="sec3-4-5_footer">
+                <h2 class="h_footer">Membership</h2>
+                <div class="p_footer">
+                    <p>Membership Plans</p>
+                    <p>Membership Benefits</p>
+                    <p>Member Login</p>
+                </div>
+            </div>
+            <div class="sec3-4-5_footer">
+                <h2 class="h_footer">Follow Us</h2>
+                
+            </div>
         </footer>
     </section>
 </body>
