update: finalizado del prototipado v0

--- a/index.html
+++ b/index.html
@@ -106,7 +106,28 @@
             </div>
             <div class="sec3-4-5_footer">
                 <h2 class="h_footer">Follow Us</h2>
-                
+                <div class="sm">
+                    <a href="https://x.com/">
+                        <button class="btn_x">
+                            <img src="images/twitter.png" alt="Button Icon">
+                        </button>
+                    </a>
+                    <a href="https://instagram.com/">
+                        <button class="btn_insta">
+                            <img src="images/instagram.png" alt="Button Icon">
+                        </button>
+                    </a>
+                    <a href="https://linkedin.com/">
+                        <button class="btn_link">
+                            <img src="images/linkedin.png" alt="Button Icon">
+                        </button>
+                    </a>
+                    <a href="https://https://github.com//">
+                        <button class="btn_git">
+                            <img src="images/github.png" alt="Button Icon">
+                        </button>
+                    </a>
+                </div>
             </div>
         </footer>
     </section>
